--- a/docker/default.conf.template
+++ b/docker/default.conf.template
@@ -1,5 +1,5 @@
 server {
-  listen ${NGINX_PORT};
+  listen 80;
   server_name localhost;
   root /app/public;
   index index.html;
@@ -62,6 +62,11 @@ server {
 
   location / {
     try_files $uri @app_server;
+  }
+
+  location = /online {
+    access_log off;
+    return 204;
   }
 
   error_page 404 /404.html;
