--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,7 +90,7 @@ services:
   nginx:
     image: nginx:stable-alpine
     healthcheck:
-      test: wget --no-verbose --tries=1 --spider http://127.0.0.1/online || exit 1
+      test: wget --no-verbose --tries=1 --spider http://127.0.0.1:$$NGINX_PORT/online || exit 1
       interval: 15s
       timeout: 2s
       retries: 5
@@ -100,6 +100,7 @@ services:
       - ./docker/default.conf.template:/etc/nginx/templates/default.conf.template
     environment:
       <<: *common-env
+      NGINX_PORT: ${EXPOSED_NGINX_PORT:-3001}
     depends_on:
       autocompleted:
         condition: service_healthy
@@ -108,7 +109,7 @@ services:
       reports:
         condition: service_healthy
     ports:
-      - "${EXPOSED_SERVER_PORT:-3001}:80"
+      - "${EXPOSED_SERVER_PORT:-3001}:${EXPOSED_SERVER_PORT:-3001}"
 
   postgres:
     image: postgres:15-alpine
