--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -187,6 +187,8 @@ services:
       interval: 30s
       timeout: 2s
       retries: 12
+    ports:
+      - "${EXPOSED_OPENSEARCH_PORT:-49200}:9200"
 
   iqdb:
     image: ghcr.io/e621ng/iqdb:ad5e363879d4e4b80a0821253ae610b7859c5d32
