Fix BURs not updating post with TCR in existing topic

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -209,6 +209,8 @@ Lint/StructNewOverride:
 Style/RedundantAssignment:
   Enabled: false
 
-
 Naming/AccessorMethodName:
+  Enabled: false
+
+Metrics/ParameterLists:
   Enabled: false
