--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,10 +4,12 @@ on:
   push:
     branches:
       - master
+      - dev
       - build-*
   pull_request:
     branches:
       - master
+      - dev
       - build-*
 
 permissions:
