Add api key usage log

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -198,9 +198,7 @@ Lint/RescueException:
   Enabled: false
 
 Lint/StructNewOverride:
-  Enabled: true
-  Exclude:
-    - app/logical/moderator/dashboard/queries/*.rb
+  Enabled: false
 
 Style/RedundantAssignment:
   Enabled: false
