--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 x-environment: &common-env
   FEMBOYFANS_HOSTNAME: http://localhost:${EXPOSED_SERVER_PORT:-4000}
   FEMBOYFANS_REDIS_URL: redis://redis
-  FEMBOYFANS_OPENSEARCH_HOST: opensearch
+  FEMBOYFANS_ELASTICSEARCH_HOST: elasticsearch
   FEMBOYFANS_MEMCACHED_SERVERS: memcached
   FEMBOYFANS_IQDB_SERVER: http://iqdb:5588
   FEMBOYFANS_RECOMMENDER_SERVER: http://recommender:5000
@@ -24,7 +24,7 @@ x-environment: &common-env
   EXPOSED_WEBPACKER_PORT: ${EXPOSED_WEBPACKER_PORT:-4003}
 
 x-depends-on: &common-depends-on
-  opensearch:
+  elasticsearch:
     condition: service_healthy
   memcached:
     condition: service_healthy
@@ -174,24 +174,24 @@ services:
       timeout: 2s
       retries: 5
 
-  opensearch:
-    image: opensearchproject/opensearch:2.13.0
+  elasticsearch:
+    image: elasticsearch:8.18.0
     environment:
       - discovery.type=single-node
+      - xpack.security.enabled=false
       - logger.level=WARN
-      - DISABLE_SECURITY_PLUGIN=true
-      - DISABLE_INSTALL_DEMO_CONFIG=true
-      - OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g
+      - ES_JAVA_OPTS=-Xms1g -Xmx1g
+      - TINI_SUBREAPER=true
     volumes:
-      - opensearch_data:/usr/share/opensearch/data
+      - elasticsearch_data:/usr/share/elasticsearch/data
     init: true
     healthcheck:
-      test: curl "opensearch:9200/_cluster/health?wait_for_status=yellow&timeout=2s"
+      test: curl "elasticsearch:9200/_cluster/health?wait_for_status=yellow&timeout=2s"
       interval: 30s
       timeout: 2s
       retries: 12
     ports:
-      - "${EXPOSED_OPENSEARCH_PORT:-49200}:9200"
+      - "${EXPOSED_ELASTICSEARCH_PORT:-49200}:9200"
 
   iqdb:
     image: ghcr.io/e621ng/iqdb:ad5e363879d4e4b80a0821253ae610b7859c5d32
@@ -319,7 +319,7 @@ services:
 volumes:
   post_data:
   iqdb_data:
-  opensearch_data:
+  elasticsearch_data:
   db_data:
   redis_data:
   node_modules:
