refactor alias handling

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -47,6 +47,7 @@ Metrics/BlockLength:
     - FactoryBot.define
     - should
     - should_eventually
+    - scoped
   Exclude:
     - config/routes.rb
     - config/environments/*.rb
