--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -176,7 +176,8 @@ services:
       retries: 5
 
   elasticsearch:
-    image: elasticsearch:9.0.1
+    build:
+      context: docker/elasticsearch
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
