--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,7 +136,7 @@ services:
   clickhouse:
     image: clickhouse/clickhouse-server:24.8.2.3-alpine
     healthcheck:
-      test: wget --no-verbose --tries=1 --spider http://127.0.0.1:8123/ping || exit 1
+      test: curl -fsS http://127.0.0.1:8123/ping || exit 1
       interval: 15s
       timeout: 2s
       retries: 5
